# research-assistant

./: .gitattributes  .gitignore  DEPLOYMENT.md  LOCAL_DEMO_SETUP.md  PROJECT_CURRENT.md  README.md  dev-start.bat  dev-start.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/research_agent/: __init__.py  config.py  main.py
backend/src/research_agent/api/: artifacts.py  chat.py  dependencies.py  health.py  papers.py  projects.py  system.py
backend/src/research_agent/db/: engine.py  models.py
backend/src/research_agent/repositories/: artifacts.py  conversations.py  paper_chunks.py  papers.py  tasks.py
backend/src/research_agent/schemas/: artifacts.py  chat.py  literature.py  papers.py  projects.py  system.py
backend/src/research_agent/services/: __init__.py  arxiv_import.py  arxiv_search.py  conversations.py  framework_building.py  guided_reading.py  intent_classifier.py  literature.py  model_call_logging.py  model_gateway.py  paper_analysis.py  pdf_processing.py  privacy.py  (+3 more)
backend/tests/: conftest.py  test_artifact_api.py  test_artifacts.py  test_arxiv_import.py  test_arxiv_search.py  test_chat_sse.py  test_config.py  test_conversation_service.py  test_conversations.py  test_guided_reading.py  test_health.py  test_literature_service.py  test_model_call_logging.py  test_model_gateway.py  test_paper_analysis.py  test_paper_api.py  test_papers.py  test_pdf_processing.py  test_privacy.py  test_project_api.py  test_research_diagnosis.py  test_router.py  test_structured_output.py  test_system_api.py  test_tasks_and_chunks.py
(+38 files in other folders)
