[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-training-agent-backend"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
  "fastapi==0.128.8",
  "httpx==0.28.1",
  "langchain-community>=0.3.27,<0.4",
  "langgraph>=0.2,<0.3",
  "arxiv>=2.1,<3",
  "openai==1.109.1",
  "pydantic==2.12.2",
  "python-dotenv>=1.0,<2.0",
  "python-multipart==0.0.20",
  "SQLAlchemy==2.0.43",
  "uvicorn==0.39.0",
]

[project.optional-dependencies]
test = ["pytest==8.4.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --basetemp=backend/.pytest-tmp"
pythonpath = ["src"]
testpaths = ["tests"]
